# pydba

./: AGENTS.md  PLAN.md  README.md  database.sqlite  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/pydba/: __init__.py  _helpers.py  _query_with_params.py  exceptions.py
src/pydba/adapters/: __init__.py  _base.py  mysql.py  postgres.py  sqlite.py
src/pydba/database/: __init__.py  _abstract.py  _database.py  _db.py  _table.py
src/pydba/dialects/: __init__.py  _base.py  _sql_dialect.py  mysql.py  postgres.py  sqlite.py
src/pydba/query/: __init__.py  _condition.py  _condition_group.py  _condition_mixin.py  _ddl_mixins.py  _having_mixin.py  _join.py  _joins_mixin.py  _on_conflict.py  _order_by.py  _query.py  _simple_mixins.py  _union.py  _where_mixin.py  alter_table.py  create_table.py  delete.py  drop_table.py  insert.py  select.py  update.py
src/pydba/query/enums/: __init__.py  chain.py  condition.py  join.py  order_by_dir.py  referential_action.py  type.py  union.py
src/pydba/query/expressions/: __init__.py  _sql.py  alias.py  current_timestamp.py  excluded.py  expression.py  identifier.py  (+2 more)
src/pydba/result/: __init__.py  _base.py  _result.py  mysql.py  postgres.py  sqlite.py
tests/: conftest.py  test_alter_table_query.py  test_conditions.py  test_delete_query.py  test_dialect_mysql.py  test_dialect_postgres.py  test_dialect_sql.py  test_dialect_sqlite.py  test_expressions.py  test_insert_query.py  test_integration_sqlite.py  test_joins.py  test_query_with_params.py  test_result_abstract.py  test_select_query.py  test_update_query.py
